--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -1,20 +1,14 @@
 # pull official base image
-FROM node:13.12.0-alpine
+FROM node:16.14.0-alpine
 
 # set working directory
-WORKDIR /app
+WORKDIR /usr/local/app
 
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
+COPY frontend/package*.json ./
 
-# install app dependencies
-COPY frontend/package.json ./
-COPY frontend/package-lock.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm install
+RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
 
-# add app
-COPY frontend/ ./
+EXPOSE 3000
 
-# start app
 CMD ["npm", "start"]
