--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: ./
       dockerfile: ./docker/dev/Dockerfile.frontend
+    ports:
+      - "3000:3000"
     container_name: beehive-dev-frontend
     stdin_open: true
     volumes:
@@ -11,7 +13,7 @@ services:
       - /usr/local/app/node_modules
     profiles:
       - dev
-  
+
   development-db:
     build:
       context: ./
