--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ docker-build-prod:
     - if: $CI_COMMIT_BRANCH == "master"
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --buid-arg API_URL=$PROD_API_URL -t $IMAGE_TAG .
+    - docker build --build-arg API_URL=$PROD_API_URL -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
 
 
@@ -44,5 +44,5 @@ docker-build-staging:
   extends: .docker-build
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --buid-arg API_URL=$STAGING_API_URL -t $IMAGE_TAG .
+    - docker build --build-arg API_URL=$STAGING_API_URL -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
