--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
 - build
+- deploy
 
 services:
   - docker:dind
@@ -45,3 +46,16 @@ docker-build-staging:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build --build-arg API_URL=$STAGING_API_URL -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
+
+  
+.docker-deploy:
+  stage: deploy
+  image: docker-latest
+
+docker-deploy-staging:
+  extends: .docker-deploy
+  rules:
+    - if: $CI_COMMIT_BRANCH == "dev"
+  script:
+    - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer | bash
+    - ssh -i .secure_files/gitlab_ssh root@10.133.94.149 'docker service update --with-registry-auth --image registry.git.logntnu.no/tekkom/web/beehive/frontend:staging beehive-staging'
