--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ docker-build-staging:
   
 .docker-deploy:
   stage: deploy
-  image: docker-latest
+  image: docker:latest
 
 docker-deploy-staging:
   extends: .docker-deploy
