--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,4 +63,5 @@ docker-deploy-staging:
     - if: $CI_COMMIT_BRANCH == "dev"
   script:
     - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer | bash
+    - ssh-keyscan -t rsa 10.133.94.149 >> ~/.ssh/known_hosts
     - ssh -i .secure_files/gitlab_ssh root@10.133.94.149 'docker service update --with-registry-auth --image registry.git.logntnu.no/tekkom/web/beehive/frontend:staging beehive-staging'
