--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,81 +1,4 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
-stages:
-- build
-- deploy
-
-services:
-  - docker:dind
-
-# use the variable assigned for a branch
-.docker-build:
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
-  stage: build
-  image: docker:latest
-
-# For the production build
-docker-build-prod:
-  extends: .docker-build
-  variables:
-    IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
-    # Tell 'docker:dind' to enable TLS (recommended)
-    # and generate certificates in the specified directory.
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-  script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --build-arg API_URL=$PROD_API_URL -t $IMAGE_TAG .
-    - docker push $IMAGE_TAG
-
-# For the staging build
-docker-build-staging:
-  variables:
-    IMAGE_TAG: $CI_REGISTRY_IMAGE:staging
-    # Tell 'docker:dind' to enable TLS (recommended)
-    # and generate certificates in the specified directory.
-  rules:
-    - if: $CI_COMMIT_BRANCH == "dev"
-  extends: .docker-build
-  script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker build --build-arg API_URL=$STAGING_API_URL -t $IMAGE_TAG .
-    - docker push $IMAGE_TAG
-
-  
-.docker-deploy:
-  stage: deploy
-  image: docker:latest
-  before_script:
-    - apk add --update bash && rm -rf /var/cache/apk/*
-    - apk add --update curl && rm -rf /var/cache/apk/*
-    - mkdir ~/.ssh
-
-docker-deploy-staging:
-  extends: .docker-deploy
-  dependencies:
-    - docker-build-staging
-  rules:
-    - if: $CI_COMMIT_BRANCH == "dev"
-  script:
-    - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer | bash
-    - chmod 600 .secure_files/gitlab_ssh
-    - ssh-keyscan -t rsa 10.133.94.149 >> ~/.ssh/known_hosts
-    - ssh -i .secure_files/gitlab_ssh root@10.133.94.149 'docker service update --with-registry-auth --image registry.git.logntnu.no/tekkom/web/beehive/frontend:staging beehive-staging'
-
-docker-deploy-production:
-  extends: .docker-deploy
-  dependencies:
-    - docker-build-prod
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-  script:
-    - curl -s https://gitlab.com/gitlab-org/incubation-engineering/mobile-devops/download-secure-files/-/raw/main/installer | bash
-    - chmod 600 .secure_files/gitlab_ssh
-    - ssh-keyscan -t rsa 10.133.94.149 >> ~/.ssh/known_hosts
-    - ssh -i .secure_files/gitlab_ssh root@10.133.94.149 'docker service update --with-registry-auth --image registry.git.logntnu.no/tekkom/web/beehive/frontend beehive'
+include:
+    project: tekkom/infrastructure/pipline-templates
+    ref: main
+    file: .container-build.gitlab-ci.yml
