--- a/package.json
+++ b/package.json
@@ -22,13 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
     "postinstall": "sh ./vendor/mazemap/install.sh"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -46,5 +42,11 @@
       "not dead",
       "not op_mini all"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0"
   }
 }
