--- a/package.json
+++ b/package.json
@@ -2,21 +2,6 @@
   "name": "frontend",
   "version": "2.6.3",
   "private": true,
-  "dependencies": {
-    "@react-spring/web": "^9.7.3",
-    "i18next": "^23.10.0",
-    "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.5.0",
-    "mazemap": "file:vendor/mazemap",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-i18next": "^14.0.5",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.22.2",
-    "react-scripts": "5.0.1",
-    "remark-gfm": "^4.0.0",
-    "web-vitals": "^3.5.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -25,6 +10,27 @@
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
     "postinstall": "sh ./vendor/mazemap/install.sh"
+  },
+  "dependencies": {
+    "@react-spring/web": "^9.7.4",
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
+    "mazemap": "file:vendor/mazemap",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.26.1",
+    "react-scripts": "^5.0.1",
+    "remark-gfm": "^4.0.0",
+    "web-vitals": "^4.2.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.1",
+    "globals": "^15.9.0"
   },
   "browserslist": {
     "production": [
@@ -42,11 +48,5 @@
       "not dead",
       "not op_mini all"
     ]
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.35.0",
-    "globals": "^15.9.0"
   }
 }
