--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "eject": "react-scripts eject",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
-    "postinstall": "sh ./vendor/mazemap/install.sh"
+    "prettier:check": "prettier . --check",
+    "prettier:fix": "prettier . --write",
+    "postinstall": "sh ./vendor/mazemap/install.sh",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
@@ -29,8 +32,12 @@
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "eslint": "^9.9.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.1",
-    "globals": "^15.9.0"
+    "globals": "^15.9.0",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.10",
+    "prettier": "3.3.3"
   },
   "browserslist": {
     "production": [
@@ -48,5 +55,8 @@
       "not dead",
       "not op_mini all"
     ]
+  },
+  "lint-staged": {
+    "*": ["eslint --cache --fix", "prettier --write"]
   }
 }
