--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-    "printWidth": 85,
-    "arrowParens": "always",
-    "semi": true,
-    "tabWidth": 2,
-    "trailingComma": "all"
+  "printWidth": 85,
+  "arrowParens": "always",
+  "semi": false,
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
