--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "remark-gfm": "^4.0.0",
-    "web-vitals": "^4.2.3"
+    "web-vitals": "^4.2.3",
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
