--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,19 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+        "@components/*": ["./src/components/*"],
+        "@context/*": ["./src/context/*"],
+        "@svg/*": ["./src/components/svg/*"],
+        "@config": ["./src/constants.ts"],
+        "@img/*": ["./public/img/*"],
+        "@pages/*": ["./src/pages/*"],
+        "@text/*": ["./public/text/*"],
+        "@themes/*": ["./src/themes/*"],
+        "@utils/*": ["./src/utils/*"],
+        "@interfaces": ["./interfaces.ts"],
+        "@/*": ["./src/*"]
+    },
+    "forceConsistentCasingInFileNames": true,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/layouts/topbar/Navigation.tsx", "src/layouts/topbar/TopBar.tsx", "src/components/mazemap/MazeMapEmbed.tsx", "src/layouts/footer/Footer.jsx", "src/layouts/footer/SocialLinks.tsx", "src/layouts/topbar/MobileNavigation.tsx"],
   "exclude": ["node_modules"]
