--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "typescript-eslint": "^8.18.1"
   },
   "devDependencies": {
