--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,6 @@
     },
     "forceConsistentCasingInFileNames": true,
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.js", "**/*.jsx"],
   "exclude": ["node_modules"]
 }
