--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,17 +1,8 @@
-# pull official base image
 FROM node:20-alpine
-
-# set working directory
 WORKDIR /app
-
 COPY package*.json ./
-
 RUN npm install
-RUN mkdir -p node_modules/.cache && chmod -R 777 node_modules/.cache
-
 COPY . .
-
 EXPOSE 3000
-
-CMD ["npm", "start"]
-
+RUN npm run build
+CMD npm start
