--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,5 +35,5 @@
     "forceConsistentCasingInFileNames": true,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.js", "**/*.jsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/vendor"]
 }
