--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
         "@components/*": ["./src/components/*"],
         "@context/*": ["./src/context/*"],
         "@svg/*": ["./src/components/svg/*"],
-        "@config": ["./src/constants.ts"],
+        "@config": ["constants.ts"],
         "@img/*": ["./public/img/*"],
         "@app/*": ["./src/app/*"],
         "@text/*": ["./public/text/*"],
