--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beehive",
-  "version": "4.0.4",
+  "version": "4.0.9",
   "private": true,
   "type": "module",
   "scripts": {
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-router": "^7.5.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
