--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --fix ./src"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^15.5.0",
     "@stylistic/eslint-plugin-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "next": "^15.2.4",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@stylistic/eslint-plugin": "^5.2.3",
     "@tailwindcss/postcss": "^4.0.16",
     "@types/node": "^22.13.13",
     "@types/react": "^19.0.12",
