--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint": "eslint --fix ./src"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^15.5.3",
+    "@next/eslint-plugin-next": "^15.5.4",
+    "login-linjeforeningen-for-it": "^1.1.5",
     "lucide-react": "^0.544.0",
-    "next": "^15.5.3",
+    "next": "^15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
-    "react-router": "^7.9.1",
+    "react-router": "^7.9.2",
     "remark-gfm": "^4.0.1",
     "swr": "^2.3.6"
   },
@@ -28,10 +29,10 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "eslint": "^9.36.0",
-    "eslint-config-next": "^15.5.3",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.44.0"
+    "typescript-eslint": "^8.44.1"
   }
 }
