--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,50 @@
 ---
 stages:
-  - build
-  - trigger-stages
+    - build
+    - trigger-stages
 
-include:
-  project: tekkom/infrastructure/pipline-templates
-  ref: main
-  file: .container-build.gitlab-ci.yml
+build:
+    stage: build
+    image:
+        name: gcr.io/kaniko-project/executor:v1.20.1-debug
+        entrypoint: ['']
+    script:
+        - |
+            if [[ "$CI_COMMIT_TAG" =~ -dev$ ]]; then
+              NEXT_PUBLIC_AUTHENTIK_CLIENT_ID=$NEXT_PUBLIC_AUTHENTIK_CLIENT_ID
+              AUTHENTIK_CLIENT_SECRET=$AUTHENTIK_CLIENT_SECRET
+              NEXT_PUBLIC_AUTHENTIK_URI=$NEXT_PUBLIC_AUTHENTIK_URI
+              NEXT_PUBLIC_URI=$NEXT_PUBLIC_URI
+              GITLAB_MESSAGE="This variable is defined in the .gitlab-ci.yml file, then overridden by Kubernetes. Whatever is missing must be audited in both of those locations. (dev env)"
+              echo "Building in development environment"
+            else
+              NEXT_PUBLIC_AUTHENTIK_CLIENT_ID=$NEXT_PUBLIC_AUTHENTIK_CLIENT_ID
+              AUTHENTIK_CLIENT_SECRET=$AUTHENTIK_CLIENT_SECRET
+              NEXT_PUBLIC_AUTHENTIK_URI=$NEXT_PUBLIC_AUTHENTIK_URI
+              NEXT_PUBLIC_URI=$NEXT_PUBLIC_URI
+              GITLAB_MESSAGE="This variable is defined in the .gitlab-ci.yml file, then overridden by Kubernetes. Whatever is missing must be audited in both of those locations. (prod env)"
+              echo "Building in production environment"
+            fi
+        - /kaniko/executor
+          --context "${CI_PROJECT_DIR}"
+          --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+          --build-arg "IMAGE_VERSION=${CI_COMMIT_TAG}"
+          --build-arg "GITLAB_MESSAGE=${GITLAB_MESSAGE}"
+          --build-arg "NEXT_PUBLIC_AUTHENTIK_CLIENT_ID=${NEXT_PUBLIC_AUTHENTIK_CLIENT_ID}"
+          --build-arg "AUTHENTIK_CLIENT_SECRET=${AUTHENTIK_CLIENT_SECRET}"
+          --build-arg "NEXT_PUBLIC_AUTHENTIK_URI=${NEXT_PUBLIC_AUTHENTIK_URI}"
+          --build-arg "NEXT_PUBLIC_URI=${NEXT_PUBLIC_URI}"
+          --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+    rules:
+        - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+$/'
+        - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+-dev$/'
+
+trigger-stages:
+    stage: trigger-stages
+    trigger:
+        project: tekkom/infrastructure/mend-renovate/mend-renovate-bot
+        strategy: depend
+        branch: main
+    rules:
+        - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+$/'
+        - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+-dev$/'
