--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,8 @@ services:
     environment:
       API_URL: ${API_URL:-http://workerbee.login.no/api}
       CDN_URL: ${CDN_URL:-https://cdn.login.no}
+      NEXT_PUBLIC_AUTHENTIK_CLIENT_ID: ${NEXT_PUBLIC_AUTHENTIK_CLIENT_ID}
+      AUTHENTIK_CLIENT_SECRET: ${AUTHENTIK_CLIENT_SECRET}
+      NEXT_PUBLIC_AUTHENTIK_URI: ${NEXT_PUBLIC_AUTHENTIK_URI}
+      NEXT_PUBLIC_URI: ${NEXT_PUBLIC_URI}
+      GITLAB_MESSAGE: ${GITLAB_MESSAGE}
