--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   fix-version:
     name: 🧩 Fix & Update Version
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'Bump version')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,15 +26,58 @@ jobs:
         run: |
           version=${latest_tag#v}
           IFS='.' read -r major minor patch <<< "$version"
-          patch=$((patch+1))
+          changed_files=$(git diff --name-only $latest_tag..HEAD | wc -l)
+          if [ "$changed_files" -lt 4 ]; then
+            patch=$((patch+1))
+          else
+            minor=$((minor+1))
+            patch=0
+          fi
           new_tag="v$major.$minor.$patch"
           echo "new_tag=$new_tag" >> $GITHUB_ENV
           echo "Bumped to $new_tag"
 
+      - name: Update package.json
+        run: |
+          find . -name "package.json" -not -path "*/node_modules/*" -exec sh -c '
+            file="$1"
+            new_ver="${2#v}"
+            if ! sed -n "3p" "$file" | grep -q "\"version\":"; then
+              echo "Version not at line 3 in $file"
+              exit 1
+            fi
+            sed -i "3s/\"version\": \"[^\"]*\"/\"version\": \"$new_ver\"/" "$file"
+          ' _ {} "${new_tag}" \;
+
+      - name: Update lock file
+        run: |
+          find . -name "package-lock.json" -not -path "*/node_modules/*" -exec sh -c '
+            file="$1"
+            new_ver="${2#v}"
+            if ! sed -n "3p" "$file" | grep -q "\"version\":"; then
+              echo "Version not at line 3 in $file"
+              exit 1
+            fi
+            if ! sed -n "9p" "$file" | grep -q "\"version\":"; then
+              echo "Version not at line 9 in $file"
+              exit 1
+            fi
+            sed -i "3s/\"version\": \"[^\"]*\"/\"version\": \"$new_ver\"/" "$file"
+            sed -i "9s/\"version\": \"[^\"]*\"/\"version\": \"$new_ver\"/" "$file"
+          ' _ {} "${new_tag}" \;
+
+      - name: Commit changes
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules)
+          git commit -m "Bump version to $new_tag" || echo "No changes to commit"
+          git push origin main
+
       - name: Create Git Tag
         run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git tag ${{ env.new_tag }}
           git push origin ${{ env.new_tag }}
 
