--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -11,14 +11,18 @@ jobs:
     name: 🧩 Fix & Update Version
     if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'Bump version')
     runs-on: ubuntu-latest
+    outputs:
+      new_tag: ${{ steps.bump.outputs.new_tag }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Get latest tag
         id: get_tag
         run: |
-          latest=$(git describe --tags --abbrev=0 || echo "v0.0.0")
+          latest=$(git describe --tags --abbrev=0 || echo "0.0.0")
           echo "latest_tag=$latest" >> $GITHUB_ENV
 
       - name: Bump version
@@ -33,13 +37,14 @@ jobs:
             minor=$((minor+1))
             patch=0
           fi
-          new_tag="v$major.$minor.$patch"
+          new_tag="$major.$minor.$patch"
           echo "new_tag=$new_tag" >> $GITHUB_ENV
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
           echo "Bumped to $new_tag"
 
       - name: Update package.json
         run: |
-          find . -name "package.json" -not -path "*/node_modules/*" -exec sh -c '
+          find . -name "package.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
             file="$1"
             new_ver="${2#v}"
             if ! sed -n "3p" "$file" | grep -q "\"version\":"; then
@@ -51,7 +56,7 @@ jobs:
 
       - name: Update lock file
         run: |
-          find . -name "package-lock.json" -not -path "*/node_modules/*" -exec sh -c '
+          find . -name "package-lock.json" -not -path "*/node_modules/*" -not -path "*/vendor/*" -exec sh -c '
             file="$1"
             new_ver="${2#v}"
             if ! sed -n "3p" "$file" | grep -q "\"version\":"; then
@@ -70,7 +75,7 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules)
+          git add $(find . -name "package.json" -o -name "package-lock.json" | grep -v node_modules | grep -v vendor)
           git commit -m "Bump version to $new_tag" || echo "No changes to commit"
           git push origin main
 
@@ -181,7 +186,7 @@ jobs:
   tag:
     name: 🏷️ Tag & Push Image
     runs-on: ubuntu-latest
-    needs: [build, validate]
+    needs: [build, validate, fix-version]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -192,7 +197,7 @@ jobs:
       - name: Tag & Push
         run: |
           IMAGE="registry.gitlab.com/${{ secrets.GITLAB_PROJECT }}"
-          VERSION=${{ env.new_tag || 'latest' }}
+          VERSION=${{ needs.fix-version.outputs.new_tag }}
           docker compose build
           docker tag beebuilt_app $IMAGE:$VERSION
           docker push $IMAGE:$VERSION
@@ -200,7 +205,7 @@ jobs:
   update:
     name: 🔄 Update Kubernetes Repo
     runs-on: ubuntu-latest
-    needs: [tag]
+    needs: [tag, fix-version]
     steps:
       - name: Checkout kube repo
         uses: actions/checkout@v4
@@ -212,8 +217,8 @@ jobs:
       - name: Update image version
         run: |
           cd kuberepo
-          yq e -i '.spec.template.spec.containers[0].image = "registry.gitlab.com/${{ secrets.GITLAB_PROJECT }}:${{ env.new_tag }}"' deployment.yaml
+          yq e -i '.spec.template.spec.containers[0].image = "registry.gitlab.com/${{ secrets.GITLAB_PROJECT }}:${{ needs.fix-version.outputs.new_tag }}"' deployment.yaml
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git commit -am "Update BeeBuilt image to ${{ env.new_tag }}"
+          git commit -am "Update BeeBuilt image to ${{ needs.fix-version.outputs.new_tag }}"
           git push
