--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -154,8 +154,8 @@ jobs:
 
       - name: Install pup
         run: |
-          curl -LO https://github.com/EricChiang/pup/releases/download/v0.4.0/pup_linux_amd64.zip
-          unzip pup_linux_amd64.zip
+          curl -LO https://github.com/ericchiang/pup/releases/download/v0.4.0/pup_v0.4.0_linux_amd64.zip
+          unzip pup_v0.4.0_linux_amd64.zip
           chmod +x pup
           sudo mv pup /usr/local/bin/
           pup -v
