--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -157,7 +157,7 @@ jobs:
           unzip pup_v0.4.0_linux_amd64.zip
           chmod +x pup
           sudo mv pup /usr/local/bin/
-          pup -v
+          pup
 
       - name: Validate routes & elements
         run: |
