--- a/.github/workflows/beebuilt.yml
+++ b/.github/workflows/beebuilt.yml
@@ -35,22 +35,8 @@ jobs:
             dev_version=$(git show origin/dev:package.json 2>/dev/null | jq -r '.version' 2>/dev/null)
             current_version=$latest_tag
             if [ -n "$dev_version" ]; then
-              if [ "$current_version" == "$dev_version" ]; then
-                new_version="$current_version"
-                new_tag="$new_version"
-              else
-                version=${latest_tag#v}
-                IFS='.' read -r major minor patch <<< "$version"
-                changed_files=$(git diff --name-only HEAD~1..HEAD | wc -l)
-                if [ "$changed_files" -lt 4 ]; then
-                  patch=$((patch+1))
-                else
-                  minor=$((minor+1))
-                  patch=0
-                fi
-                new_version="$major.$minor.$patch"
-                new_tag="$new_version"
-              fi
+              new_version="$dev_version"
+              new_tag="$new_version"
             else
               version=${latest_tag#v}
               IFS='.' read -r major minor patch <<< "$version"
